# cove-cli

./: .markdownlint-cli2.jsonc  .pre-commit-config.yaml  README.md  cove_cli.py  pyproject.toml
cove_cli/: __main__.py  cove_cli.py
tests/: conftest.py  test_cove_cli.py
