[tool.poetry]
name = "cove-cli"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
botocove = "^1.7.1"
jsonlines = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
