[tool.poetry]
name = "cove-cli"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]
readme = "README.md"

[tool.poetry.scripts]
cove_cli = "cove_cli.cove_cli:main"

[tool.poetry.dependencies]
python = "^3.8"
botocove = "^1.7.1"
jsonlines = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pytest = "^7.2.2"
flakeheaven = "^3.2.1"
mypy = "^1.1.1"
moto = "^4.1.4"
cli-test-helpers = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
